eck/quickstart/coolcluster/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/elasticsearch(/|$)(.*)$ /$2 break;
spec:
  rules:
    - http:
        paths:
          - path: /elasticsearch(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: coolcluster-es-http
                port:
                  number: 9200
